--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
   	<%= link_to "Home", root_path %>
 	<%= link_to "About", about_path %>
-	<%= link_to "Contact us", contact-us_path %>
+	<%= link_to "contact_us", contact_path %>
     <%= yield %>
   </body>
 </html>
